# pdf-compress

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  KI-ECHTZEIT-REAKTION-FALLSTUDIE.md  PDF-OPTIMIZATION-CASE-STUDY.md  PRIORITY.md  README.md  REQUIREMENTS.md  STRUCTURE.md  llms.txt  main.py  pyproject.toml  result.md  test_compression.py
context/llms/: llms-research.md
context/prompting/: chatgpt-avm-history.md  claude-desktop-history.md
context/testing/: compression-commands-raw.txt  image-compression-summary.md  warp-ai-conversation-export.md
data/images/: .gitkeep
src/: compress_pdf.py  crop_circle.py  insert_image.py  main_workflow.py
tests/: __init__.py
