[project]
name = "pdf-compress"
version = "0.1.0"
description = "Python tool for automatic CV image optimization and PDF integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "markdownify>=1.1.0",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "requests>=2.32.4",
]
